--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.1.8",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.8.6",
+    "craco": "^0.0.3",
     "cruip-js-toolkit": "^1.0.2",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
