--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.1.8",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.8.6",
+    "caniuse-lite": "^1.0.30001240",
     "cruip-js-toolkit": "^1.0.2",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
@@ -20,7 +21,8 @@
     "react-transition-group": "^4.4.1",
     "swiper": "^6.4.1",
     "tailwindcss": "^2.1.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "craco start",
