--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-ig-feed": "^1.0.4",
     "react-instagram-embed": "^3.0.0",
+    "react-rounded-image": "^2.0.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
