--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "autoprefixer": "^9.8.6",
     "caniuse-lite": "^1.0.30001240",
     "cruip-js-toolkit": "^1.0.2",
-    "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -51,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.63.6"
   }
 }
