--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react-dom": "^17.0.2",
     "react-ig-feed": "^1.0.4",
     "react-instagram-embed": "^3.0.0",
+    "react-player": "^2.12.0",
     "react-rounded-image": "^2.0.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
+    "react-youtube": "^10.1.0",
+    "react-youtube-embed": "^1.0.3",
     "swiper": "^6.4.1",
     "tailwindcss": "^2.1.2",
     "web-vitals": "^0.2.4",
