--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "appy-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.4.2",
