--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.8.6",
     "caniuse-lite": "^1.0.30001240",
