add vanilla analytics that is compatible wtih react 17

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "yarn": "^1.22.10"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider craco start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider craco build",
     "test": "craco test",
     "eject": "craco eject"
   },
